Opened 12 years ago

Closed 12 years ago

#8729 closed bug (fixed)

gcc4 Debugger crash

Reported by: kallisti5 Owned by: anevilyak
Priority: normal Milestone: R1/alpha4
Component: Applications/Debugger Version: R1/Development
Keywords: DwarfFile Cc:
Blocked By: Blocking:
Platform: All

Description

Loading SheepShear (my PowerPC emulator) into debugger causes *Debugger* to crash.

gcc4hybrid hrev44335

SheepShear gcc4 binary attached (no real dependencies besides base Haiku)

(gdb) bt
#0  0x0031e48a in DwarfFile::_FinishCompilationUnit ()
#1  0x0031e622 in DwarfFile::FinishLoading ()
#2  0x0031fad1 in DwarfManager::FinishLoading ()
#3  0x002b89a7 in DwarfTeamDebugInfo::CreateImageDebugInfo ()
#4  0x002c42ec in TeamDebugInfo::LoadImageDebugInfo ()
#5  0x002a9096 in LoadImageDebugInfoJob::Do ()
#6  0x002b1429 in Worker::_ProcessJobs ()
#7  0x002b153d in Worker::_WorkerLoop ()
#8  0x002b15f3 in Worker::_WorkerLoopEntry ()
#9  0x008f2247 in thread_entry () from /boot/system/lib/libroot.so
#10 0x78033fec in ?? ()

Attachments (1)

SheepShear (2.5 MB ) - added by kallisti5 12 years ago.
gcc4 SheepShear binary (compiled with Haiku gcc4 and -g)

Change History (5)

by kallisti5, 12 years ago

Attachment: SheepShear added

gcc4 SheepShear binary (compiled with Haiku gcc4 and -g)

comment:1 by kallisti5, 12 years ago

Loaded via command line:

Debugger ./SheepShear

Code for SheepShear if needed is here: https://github.com/kallisti5/sheepshear

comment:2 by anevilyak, 12 years ago

Component: ApplicationsApplications/Debugger
Milestone: UnscheduledR1/alpha4
Owner: changed from nobody to anevilyak
Status: newin-progress

Can reproduce it, looking into it...

comment:3 by anevilyak, 12 years ago

Fixed in hrev44338. The crash in question was due to it using some GNU extensions to the DWARF tags that we don't recognize (specifically DW_TAG_GNU_template_template_param). However, something's still odd about the debug info in that executable since we're not able to map functions to file names or anything else right now. May be using some DWARF3/4 extensions that we don't yet support.

comment:4 by anevilyak, 12 years ago

Resolution: fixed
Status: in-progressclosed
Note: See TracTickets for help on using tickets.