Fix #8729.

- If we're asked to generate an entry for a tag we don't recognize,
  return an error so don't then attempt to add a null/invalid entry into the
  compilation unit's entry list and later crash dereferencing it.